# rime_table_bin_decompiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.h  main.cpp  mapped_file.cc  marisa.h  string_table.cc  string_table.h  table.cc  vocabulary.cc  vocabulary.h  xmake.lua
.github/workflows/: build-linux.yml  build-windows.yml  commit-ci.yml
include/: codepage.h
marisa/grimoire/io/: reader.cc
src/: common.h  main.cpp  mapped_file.cc  mapped_file.h  marisa.h  rime_table_decompiler.cc  spelling.h  string_table.cc  string_table.h  table.cc  table.h  vocabulary.cc  vocabulary.h
src/rime/: common.h
src/rime/dict/: table.cc  table.h
v3/rime/: common.h
v3/rime/dict/: table.cc  table.h
